[gd_scene load_steps=2 format=3 uid="uid://hcy5kibydhny"]

[ext_resource type="Script" path="res://control.gd" id="1_80ukh"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_80ukh")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "you:"

[node name="wins" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer2/HBoxContainer2"]
layout_mode = 2
text = "opponent: "

[node name="losses" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer2/HBoxContainer2"]
layout_mode = 2
text = "0"

[node name="HBoxContainer3" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "The computer picks: "

[node name="choice" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "null"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="rock" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "rock"

[node name="paper" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "paper"

[node name="scissors" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "scissor
"

[node name="message" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "This is a mesage"

[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/rock" to="." method="_on_rock_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/paper" to="." method="_on_paper_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/scissors" to="." method="_on_scissors_pressed"]
